--- a/composer.json
+++ b/composer.json
@@ -15,19 +15,21 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "predis/predis": "^2.2"
+        "maatwebsite/excel": "^3.1",
+        "predis/predis": "^2.2",
+        "spatie/laravel-settings": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/horizon": "^5.21",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
+        "laravel/telescope": "^4.16",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "pestphp/pest-plugin-laravel": "^2.2",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0",
-        "laravel/horizon": "^5.21",
-        "laravel/telescope": "^4.16",
-        "pestphp/pest-plugin-laravel": "^2.2"
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
